// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Status Snapshots tests should match view="contrast" snapshot 1`] = `
<div>
  <span
    class="component green contrast"
  >
    <span
      class="ellipsis"
    >
      Label
    </span>
  </span>
</div>
`;

exports[`Status Snapshots tests should match view="muted" snapshot 1`] = `
<div>
  <span
    class="component green muted"
  >
    <span
      class="ellipsis"
    >
      Label
    </span>
  </span>
</div>
`;

exports[`Status Snapshots tests should match view="muted-alt" snapshot 1`] = `
<div>
  <span
    class="component green muted-alt"
  >
    <span
      class="ellipsis"
    >
      Label
    </span>
  </span>
</div>
`;
